kyverno/00-kyverno-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
